fix: admin/logs: firefox was clipping "g" in the username

--- a/admin/src/index.scss
+++ b/admin/src/index.scss
@@ -41,7 +41,7 @@ div.MuiTreeItem-content { padding: 0; } // remove wasting horizontal padding
   background-color: #8882;
 }
 .MuiDataGrid-cell {
-  line-height: 1.1em;
+  line-height: 1.2em;
 }
 .MuiDataGrid-filterForm { flex-wrap: wrap; justify-content: space-evenly; row-gap: 1em; } // fit on mobile
 
